搭建首页面板

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://www.layuicdn.com/layui/css/layui.css" />
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1751789_a2anyl5e9va.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       html {
