--- a/public/index.html
+++ b/public/index.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://www.layuicdn.com/layui/css/layui.css" />
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1751789_a2anyl5e9va.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1751789_z2q78kwjxl.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       html {
         background-color: #F2F2F2;
       }
-    </style>
+      </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+
+    <script src="https://www.layuicdn.com/layui-v2.5.6/layui.js"></script>
+    <script>
+      layui.use(['element', 'form'], function(){
+        var element = layui.element;
+      });
+    </script>
   </body>
 </html>
