--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" type="text/css" href="https://www.layuicdn.com/layui/css/layui.css" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1751789_z2q78kwjxl.css">
+    <script src="http://192.168.0.103:8083/target/target-script-min.js#anonymous"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       html {
